<?xml version="1.0"?>
<package format="3">
  <name>gz_attach_links</name>
  <version>0.0.1</version>
  <description>
    A Gazebo Sim plugin to attach two links in a model at spawn
  </description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

